# routes/chapitreRoutes.js
@@ -1,17 +1,16 @@
 const express = require("express");
 const ChapitreController = require("../controllers/api/chapitreController");
-const upload = require("../config/multerConfig");
 
 const router = express.Router();
 
-// router.post('/:matiereId/chapitres', upload.single('file'), ChapitreController.createChapitre);
+router.post('/:matiereId', ChapitreController.createChapitre);
+router.post('/search/:matiereId', ChapitreController.searchChapitre);
 
-/*
 router.get('/', ChapitreController.getAllChapitres);
-router.get('/:id', ChapitreController.getChapitreById);
-router.put('/:id', ChapitreController.updateChapitre);
-router.delete('/:id', ChapitreController.deleteChapitre);
-router.get('/search', ChapitreController.searchChapitres); // Recherche d'un chapitre
-*/
+router.get('/:chapitreId', ChapitreController.getChapitreById);
+
+router.put('/:chapitreId', ChapitreController.updateChapitre);
+router.delete('/:chapitreId', ChapitreController.deleteChapitre);
+
 
 module.exports = router;
