# routes/fileRoutes.js
@@ -8,23 +8,34 @@ const {
   getAllFiles,
   addOneFile,
 } = require("../controllers/api/fileController");
+
 const { fileUpload } = require("../config/multerConfig");
 
-router.get("/", (req, res) => {
-  res.send("file");
-});
-
-router.get("/get/all", getAllFiles);
-router.get("/get/:id", getOneFile);
-
+// Route pour ajouter un fichier
 router.post(
-  "/add/",
+  "/add-file/:matiereId/:chapitreId",
   fileUpload,
-  express.static(path.join(__dirname, "public/documents")),
-  addOneFile
+  (req, res) => {
+    const { matiereId, chapitreId } = req.params;
+    addOneFile(req, res, matiereId, chapitreId);
+  }
 );
 
-// router.put("/update/:id", updateFile);
-// router.delete("/del/:id", deleteFile);
+// Route principale des fichiers
+router.get("/", (req, res) => {
+  res.send("Bienvenue dans la gestion des fichiers");
+});
+
+// Route pour obtenir tous les fichiers
+router.get("/getAll-files", getAllFiles);
+
+// Route pour obtenir un fichier par ID
+router.get("/get-file/:id", getOneFile);
+
+// Route pour mettre à jour un fichier par ID
+router.put("/update-file/:id", updateFile);
+
+// Route pour supprimer un fichier par ID
+router.delete("/delete-file/:id", deleteFile);
 
 module.exports = router;
