# routes/indexRoutes.js
@@ -7,11 +7,12 @@ const authRoutes = require("./authRoutes");
 const fileRoutes = require("./fileRoutes");
 
 router.use("/auth", authRoutes);
-/*
-router.use("/matieres", matiereRoutes);
+router.use("/matieres", matiereRoutes)
 router.use("/chapitres", chapitreRoutes);
-router.use("/search", searchRoutes);
 router.use("/file", fileRoutes);
+
+/*
+router.use("/search", searchRoutes);
 */
 
 module.exports = router;
