# routes/matiereRoutes.js
@@ -1,17 +1,16 @@
 const express = require('express');
 const router = express.Router();
 const MatiereController = require('../controllers/api/MatiereController');
-const ChapitreController = require("../controllers/api/chapitreController")
 
+
+router.post('/', MatiereController.createMatiere);
+router.post('/search', MatiereController.searchMatiereByIntitule);
 
 router.get('/', MatiereController.getAllMatieres);
-router.get('/:id', MatiereController.getMatiereById);
-router.post('/', MatiereController.createMatiere);
-router.put('/:id', MatiereController.updateMatiere);
-router.delete('/:id', MatiereController.deleteMatiere);
-router.post('/:matiereId/chapitres', ChapitreController.createChapitre);
-router.get('/matieres/search', MatiereController.searchMatiereByIntitule); // Nouvelle route pour la recherche des matières
+router.get('/:matiereId', MatiereController.getMatiereById);
+
+router.put('/:matiereId', MatiereController.updateMatiere);
+router.delete('/:matiereId', MatiereController.deleteMatiere);
 
 
 module.exports = router;
-
